--- a/angular.json
+++ b/angular.json
@@ -72,7 +72,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/styles.scss"
             ],
             "scripts": [],
             "assets": [
@@ -123,5 +124,10 @@
       }
     }
   },
-  "defaultProject": "my-angular-web"
+  "defaultProject": "my-angular-web",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
